# gemini_api

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/common/: constants.py  settings.py
app/router/: documents_router.py
services/: brief_services.py  documents_services.py
tests/: TEST_SUMMARY.md  conftest.py  test_documents_router.py  test_documents_service.py
